# corewar

./: .gitignore  0  2  3  CMakeLists.txt  Makefile  client  corewar.h  get_ip.rb  handle_error.c  handle_player.c  handle_players.c  handle_process.c  helpers.c  m0  main.c  op.c  op.h  op1.c  parse_flags.c  pr_memory.c  start_game.c  visual.c
net/Serv/: server.h
operations_vm/: Makefile  handle_add_sub.c  handle_aff.c  handle_and_or_xor.c  handle_forks.c  handle_ldi.c  handle_ldis.c  handle_lds.c  handle_live.c  handle_st.c  handle_sti.c  handle_stis.c  handle_zjmp.c  helpers.c
vm_champs/: 1
vm_champs/champs/: Car  Car.cor  Car.s  Car1.cor  Car1.s  Car_orig.cor  Car_orig.s
vm_champs/champs/championships/2017/pzarmehr/: overwatch.cor  overwatch.s
